fixing css issues on smaller devices

--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -5,22 +5,42 @@
 
 .headerContainer {
     display: flex;
-    justify-content: space-around;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
     background-color: #0f0f0f;
     height: 90px;
-    align-items: flex-end;
     font-family: 'Quicksand', sans-serif;
 }
 
 .headerElement {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
     color: whitesmoke;
     text-decoration: none;
     font-style: italic;
     font-size: 14px;
     width: 100px;
+    height: 50px;
+    align-items: flex-end;
     transition: font-size 1s;
 }
 
 .headerElement:hover {
     font-size: 21px;
+}
+
+.navLinks {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: space-around;
+}
+
+@media (max-width: 400px) {
+    .navLinks {
+        flex-direction: column;
+    }
 }
