--- a/src/css/pages/Collection.css
+++ b/src/css/pages/Collection.css
@@ -72,3 +72,18 @@
         margin-bottom: 15px;
     }
 }
+
+@media (max-width: 400px) {
+    .mediaContainer {
+        width: 320px;
+    }
+
+    .mediaElement {
+        width: 320px;
+        display : flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        color: whitesmoke;
+    }
+}
